--- a/aiImageDetection/manifest.json
+++ b/aiImageDetection/manifest.json
@@ -2,20 +2,22 @@
   "manifest_version": 3,
   "name": "AI Image Detector",
   "version": "1.0",
-  "description": "Detects AI-generated images on the current page.",
-  "permissions": ["activeTab", "scripting","downloads"],
-  "host_permissions": ["https://api.aiornot.com/*"],
-  "action": {
-    "default_popup": "popup.html"
-  },
-
-  "background": {
-    "service_worker": "background.js"
-  },
+  "permissions": [
+    "storage",
+    "scripting",
+    "activeTab"
+  ],
+  "host_permissions": [
+    "http://localhost/*"
+  ],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
-  ]
+  ],
+  "action": {
+    "default_popup": "popup.html"
+  }
 }
